# RevealEngine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Assets/: imgui.ini
Assets/models/: imgui.ini
Assets/shaders/glsl/: flatShader.frag  flatShader.vert  solidShader.frag  solidShader.vert
Assets/shaders/hlsl/: CommonTypes.hlsli  FlatShader.hlsl  GridShader.hlsl  OpaqueShader.hlsl
Source/: CMakeLists.txt  main.cpp
Source/Editor/: editor.cpp  editor.hpp  utils.cpp  utils.hpp
Source/Editor/viewport/: console.cpp  console.hpp  dock_space.cpp  dock_space.hpp  entity_properties.cpp  entity_properties.hpp  file_explorer.cpp  file_explorer.hpp  menu_bar.cpp  menu_bar.hpp  scene_graph.cpp  scene_graph.hpp  world_properties.cpp  world_properties.hpp
Source/Project/: project.cpp  project.hpp
Test/: CMakeLists.txt  math_func_test.cpp  matrix_test.cpp  scalar_test.cpp  test_scene.cpp  vector_test.cpp
